--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,40 @@
+*, body, html {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-size: 10px;
+}
+
+/* STYLES FOR LIGHT MODE */
+
 .App {
-  text-align: center;
+    width: 100vw;
+    height: 100vh;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.themeContainer {
+    text-align: right;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.themeButton {
+    padding: 2rem;
+    outline: none;
+    cursor: pointer;
+    margin: 2rem 2rem 0 0;
+    font-size: 2.5rem;
+    border-radius: 50%;
+    border: 3px solid #000;
+    background-color: #fff;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+/* STYLES FOR DARK MODE */
+
+.darkThemeApp {
+    background-color: #333333;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.darkThemeButton {
+    color: #fff;
+    border: 3px solid #fff;
+    background-color: #333333;
 }
